--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -58,8 +58,11 @@ Souboj jeden na jednoho však může vypadat jako téměř laboratorní podmínk
 
 Jedním ze základních požadavků, které jsou na vojáka kladeny, je schopnost \textbf{držení formace}. Stojíte-li jako semknutá řada, štít na štít, meče připravené opětovat jakýkoliv úder, který by protivník zkusil na kamaráda vedle, je mnohem těžší prorazit vašimi řadami a dostat se k lučištníkům, kteří nepříteli způsobují těžké ztráty. 
 
-\textbf{Komunikace} mezi velením a vojskem je dalším faktorem
+Při skupinové šarvátce hraje zpravidla rozhodující roli taktická \textbf{koordinace} spolubojovníků. Nepřítel, který vám překvapivě vpadl do zad, je mnohem nepříjemnější záležitost, než nepřítel, který postává opodál a čeká, až na něj přijde řada.  
 
+Pro dosažení koordinace je však nutná \textbf{komunikace}. Při šarvátce, rozplánovat si postup v omezeném čase a aniž by plán byl zachycen protivníkem vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často fyzicky netriviálně vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Druhou možností je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a do určité vzdálenosti vcelku spolehlivá, avšak signály musí být předem dohodnuté a nemůže jich být mnoho, postrádá tedy flexibilitu a detailnost informace. Jak vidno, jde o velmi důležitou součást vedení bitvy, přesto však vidíme mnoho videoher ji zcela zanedbat.
+\bigbreak
+Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně ony obrovské výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat je jednoho po druhém rychle aby ostatní nepřišli na pomoc.
 
 \section{Chladná zbraň ve videohrách}
 Ve většině videoher je podoba boje oproti realitě silně stylizovaná, jak po vizuální stránce, tak z hlediska kontroly, která je hráči poskytnuta. 
@@ -70,35 +73,29 @@ Ovládání se zpravidla dá popsat tak, že hráč stiskne tlačítko, a postav
 \end{itemize}
 
 \subsection{Zaklínač 3 - vzorový příklad}
-q
 
 \subsection{Chladná zbraň jako doplňkový prvek}
-dsa
 
 
 
 \section{Hry s větší kontrolou}
-hh
 
 \subsection{Die by the Sword}
-gfd
 
 \subsection{Mount\&Blade}
-trq
 
 \subsection{Kingdom Come: Deliverance}
-bgz
+
+
 
 
 \section{Alternativní ovladače}
-uruzq
 
 \subsection{Virtuální realita}
-ghff
+
+\subsection{Pohybové senzory ve smartphonu}
 
 \subsection{Obskurní periferie}
-hdj
 
 
 \section{Shrnutí}
-fd
