--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -11,7 +11,7 @@ Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné v
 
 Jakmile by se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad zbraní, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě ne všechny úkony, o které se pokusí, budou mezi těmi, se kterými autor při vytváření hry počítal. Jak zaručíme, že i v takové situaci bude chování hry odpovídat hráčovu očekávání?\footnote{Pomyslete jaké zklamání a pocit zrady musí cítit hráč, který se jen nevinně pokusil podrbat mečem na zádech, načež jeho postava bez varování vystřelila kilometr do oblak a svou smrtí smazala hodinu neuloženého postupu} Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci zbraně. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles, jež na moderním hardwaru nemají problém zpracovávat v reálném čase stovky objektů. Zahrnutím meče do fyzikální simulace můžeme ušetřit díl práce, která by jinak musela být implementována ručně, a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které již hráči je povědomé z reálného světa, což mu může být nápomocné k rychlému intuitivnímu uchopení systému. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik.\footnote{Příklady po krátkém zamyšlení: odrážení střel, srážení hledí protivníkovy helmy, odpalování předmětů na protivníka, páčení víka truhlice, imerzivní tlačítka stisknutelná úderem meče}
 
-Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}\footnote{\url{https://cs.wikipedia.org/wiki/Dlouh\%C3\%BD_me\%C4\%8D}}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je koncipované specificky pro naší vybranou zbraň. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za maximálního využití jeho vestavěného fyzikálního subsystému. Kód bude psán v souladu s dobrými praktikami objektového programování a standarní štábní kulturou enginu Unity (\cite{Unity}), doprovázený podrobnou programátorskou dokumentací a extenzivními testy, aby bylo dalším programátorům umožněno co nejvyšší pohodlí při jeho použítí a rozšiřování. Celý výsledný projekt bude umístěn veřejně pod MIT licencí a zaplní tak prázdný prostor opensource her s jemně ovladatelným bojovým systémem.
+Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}\footnote{\url{https://cs.wikipedia.org/wiki/Dlouh\%C3\%BD_me\%C4\%8D}}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je koncipované specificky pro naší vybranou zbraň. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za maximálního využití jeho vestavěného fyzikálního subsystému. Kód bude psán v souladu s dobrými praktikami objektového programování a standarní štábní kulturou enginu Unity (\cite{Unity}), doprovázený podrobnou programátorskou dokumentací, aby bylo dalším programátorům umožněno co nejvyšší pohodlí při jeho použítí a rozšiřování. Celý výsledný projekt bude umístěn veřejně pod MIT licencí a zaplní tak prázdný prostor opensource her s jemně ovladatelným bojovým systémem.
 
 \section*{Struktura práce}
 
