--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -36,23 +36,23 @@ Mezi znaky zkušeného šermíře patří schopnost být si vědom těchto manti
 
 Extrémní případ těchto omezení vidíme v moderních šermířských komunitách. U těch najdeme velmi \textbf{striktní pravidla} a vysoké nároky na bojovou výstroj s cílem zamezit jakýmkoliv vážným zraněním a ztrátám na životech, jelikož ty přirozeně nejsou cílem jejich snažení. 
 
-Avšak pokud nedochází k žádným reálným zraněním, \textbf{jak lze určit, kdo vyhrál?} Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
+Avšak pokud nedochází k žádným reálným zraněním, \textbf{jak lze rozhodnout, kdo vyhrál?} Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
 
 \subsection{Boj jeden na jednoho}
-Jak tedy probíhá duel mezi dvěma šermíři? Hloubkový rozbor zohledňující historické i moderní techniky, rozdílné úrovně zkušenosti, zdatnosti a motivace obou zápasníků, veškeré obvyklé zbraně, kterými by mohli být vybaveni, prostředí a vnější okolnosti, které v souboji mohou hrát podstatnou roli, není možné provést v rozsahu bakalářské práce, natož jedné její kapitoly. Pro ten tedy čtenáře odkáži na specializovanou literaturu \cite{MedievalArmorAndArmorCombat}\cite{MedievalArmsArmorAndTactics}\cite{MedievalMilitaryTechnology}\cite{HistoryOfSurrender}.
+Jak tedy probíhá duel mezi dvěma šermíři? Hloubkový rozbor zohledňující historické i moderní techniky, rozdílné úrovně zkušenosti, zdatnosti a motivace obou zápasníků, veškeré obvyklé zbraně, kterými by mohli být vybaveni, prostředí a vnější okolnosti, které v souboji mohou hrát podstatnou roli, není možné provést v rozsahu bakalářské práce, natož jedné její kapitoly. Pro ten tedy čtenáře odkáži na specializovanou literaturu \cite{KunstDesFechtens} \cite{FightingWithTheGermanLongsword} \cite{MedievalArmorAndArmorCombat}\cite{MedievalArmsArmorAndTactics}\cite{MedievalMilitaryTechnology}.
 
-Zde si zběžně nastíníme pár faktorů, které při souboji hrají důležitou roli.
+Zde si pouze nastíníme pár základních faktorů, které při souboji hrají důležitou roli.
 
-\textbf{Obratnost zbraně} - 
+\textbf{Obratnost zbraně} - schopnost rychle měnit její dráhu, reagovat na změny situace (např. vyblokovat nečekaný úder) či změny situace sám vyvolat (např. na poslední chvíli zastavit fingovaný úder a stočit čepel na jiné místo, které protivník nechal nechráněné). Mezi faktory, ze kterých vyplývá, patří velikost a hmotnost zbraně, její tvar, těžiště a způsob držení\footnote{Čím jsou ruce dál od sebe, tím silnější je princip páky.}.
 
-\textbf{Dosah, pohyb, terén}
+\textbf{Dosah, pohyb, terén} - V okamžiku, kdy vám protivník není schopen ublížit a vy jemu ano, můžete si dovolit být libovolně agresivní\footnote{Díky tomu dlouhé zbraně jako např. kopí mohou být velmi účinné i v rukou nezkušeného odvedence.}. Je-li váš protivník v takovéto výhodě, jedinou možností je se k němu přiblížit - pak se dostanete do výhody vy, jelikož zbraně s dlouhým dosahem zpravidla trpí na nízkou obratnost při boji zblízka\footnote{Nedejte protivníkovi čas tasit poboční zbraň.}. Vaše možnosti se k němu přiblížit přirozeně velmi závisí na terénu\footnote{Když stojíte pod hradbami a protivník bodá kopím z ochozu nad vámi, jste v pěkné kaši.}.
 
 \textbf{Zbroj, únava}
 
 \textbf{Předvídání protivníka}
 
 \subsection{Hromadný boj a boj proti přesile}
-Souboj jeden na jednoho však může vypadat jako téměř laboratorní podmínky v porovnání s chaotickými situacemi, v rámci kterých v historii běžně k boji docházelo.   
+Souboj jeden na jednoho však může vypadat jako téměř laboratorní podmínky vedle chaotických situací, v rámci kterých v historii běžně k boji docházelo.   
 
 Často se střetávaly větší, více či méně \textbf{organizované skupiny}, případně celé armády čítající mnoho takových pevně ustanovených jednotek. V takové situaci je na místě, aby bojovníkova individualita ustoupila do pozadí - rozhodujícím faktorem je až na výjimky taktické jednání a sladěnost celku. 
 
@@ -60,13 +60,13 @@ Jedním ze základních požadavků, které jsou na vojáka kladeny, je schopnos
 
 Při skupinové šarvátce hraje zpravidla rozhodující roli taktická \textbf{koordinace} spolubojovníků. Nepřítel, který vám překvapivě vpadl do zad, je mnohem nepříjemnější záležitost, než nepřítel, který postává opodál a čeká, až na něj přijde řada.  
 
-Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při šarvátce na postupu, v omezeném čase a aniž by plán byl zachycen protivníkem, vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často fyzicky netriviálně vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Protipólem pak je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a v určitém doslechovém okruhu vcelku spolehlivá, avšak signály musí být předem dohodnuté a nemůže jich být mnoho, postrádá tedy flexibilitu a detailnost informace. Jak vidno, jde o zásadní součást vedení bitvy, přesto však vidíme mnoho videoher ji zcela zanedbat.
+Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při šarvátce na postupu, v omezeném čase a aniž by plán byl zachycen protivníkem, vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často netriviálně fyzicky vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Protipólem pak je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a v určitém doslechovém okruhu vcelku spolehlivá, avšak signály musí být předem dohodnuté a variant nemůže být mnoho, postrádá tedy flexibilitu a detailnost informace. Jak vidno, jde o zásadní součást vedení bitvy, přesto však vidíme mnoho videoher ji zcela zanedbat.
 \bigbreak
-Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně ony obrovské výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat je jednoho po druhém rychle než ostatní přijdou na pomoc.
+Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně ony kolosální výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat jednoho po druhém rychle než mu ostatní přijdou na pomoc.
 
 \subsection*{Shrnutí}
 Čtenář byl seznámen se základními charakteristikami provázejícími 
-boj s chladnou zbraní a historickým pozadím které vedlo k jejich utvoření
+boj s chladnou zbraní a historickým pozadím, které vedlo k jejich utvoření.
 
 \section{Chladná zbraň ve videohrách}
 Ve většině videoher je podoba boje oproti realitě silně stylizovaná, jak po vizuální stránce, tak z hlediska kontroly, která je hráči poskytnuta. 
