--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -79,3 +79,17 @@
   year        = {2002},
   url         = {http://baptor.free.fr/Forge/Medieval%20Arms%20Armor%20and%20Tactics.pdf},
 }
+
+@book{KunstDesFechtens,
+  author         = {Meyer, Joachim},
+  publisher      = {Berger, Thiebolt},
+  title          = {Gründtliche Beschreibung der Kunst des Fechtens},
+  year           = {1570}
+}
+
+@book{FightingWithTheGermanLongsword,
+  author         = {Tobler, Christian Henry},
+  publisher      = {Freelance Academy Press, Inc., Wheaton},
+  title          = {Fighting with the German Longsword},
+  year           = {2015}
+}
