--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -41,7 +41,7 @@ Extrémní případ těchto omezení vidíme v moderních šermířských komuni
 Avšak pokud nedochází k žádným reálným zraněním, \textbf{jak lze rozhodnout, kdo vyhrál?} Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
 
 \subsection{Boj jeden na jednoho}
-Jak tedy probíhá duel mezi dvěma šermíři? Hloubkový rozbor zohledňující historické i moderní techniky, rozdílné úrovně zkušenosti, zdatnosti a motivace obou zápasníků, veškeré obvyklé zbraně, kterými by mohli být vybaveni, prostředí a vnější okolnosti, které v souboji mohou hrát podstatnou roli, není možné provést v rozsahu bakalářské práce, natož jedné její kapitoly. Pro ten tedy čtenáře odkáži na specializovanou literaturu \cite{KunstDesFechtens} \cite{FightingWithTheGermanLongsword} \cite{MedievalArmorAndArmorCombat}\cite{MedievalArmsArmorAndTactics}\cite{MedievalMilitaryTechnology}.
+Jak tedy probíhá duel mezi dvěma šermíři? Hloubkový rozbor zohledňující historické i moderní techniky, rozdílné úrovně zkušenosti, zdatnosti a motivace obou zápasníků, veškeré obvyklé zbraně, kterými by mohli být vybaveni, prostředí a vnější okolnosti, které v souboji mohou hrát podstatnou roli, není možné provést v rozsahu bakalářské práce, natož jedné její kapitoly. Pro ten tedy čtenáře odkáži na specializovanou literaturu \cite{KunstDesFechtens} \cite{FightingWithTheGermanLongsword} \cite{ModernHEMA}.  
 
 Zde si pouze nastíníme pár základních faktorů, které při souboji hrají důležitou roli.
 
@@ -69,7 +69,7 @@ Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při
 Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně kolosální výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat jednoho po druhém rychle, než mu ostatní přijdou na pomoc.
 
 \subsection*{Shrnutí}
-Seznámili jsme čtenáře s historickým pozadím a základními vlastnostmi, které charakterizují boj s chladnou zbraní v reálném světě. Nyní by měl být připraven pokročit dál a provést srovnání s přístupem, jakým tuto problematiku adaptuje svět videoher.
+Seznámili jsme čtenáře s historickým pozadím a základními prvky, které charakterizují boj s chladnou zbraní v reálném světě. Nyní by měl být připraven pokročit dál a provést srovnání s přístupem, jakým tuto problematiku adaptuje svět videoher.
 
 \section{Chladná zbraň ve videohrách}
 
