--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -39,6 +39,7 @@
   url             = {https://www.jstor.org/stable/1302940?seq=1},
 }
 
+
 @article{Satrh,
   author          = {Vojáček, Tomáš "Vojcl"},
   journal         = {Larp.cz},
@@ -90,6 +91,17 @@
 @book{FightingWithTheGermanLongsword,
   author         = {Tobler, Christian Henry},
   publisher      = {Freelance Academy Press, Inc., Wheaton},
-  title          = {Fighting with the German Longsword},
-  year           = {2015}
+  title          = {Fighting with the German Longsword - Revised and Expanded edition},
+  year           = {2015},
+  url            = {https://books.google.cz/books?id=npDgDwAAQBAJ&lpg=PT8&ots=4Dbrd2KneY&dq=longsword&lr&hl=cs&pg=PT8#v=onepage&q=longsword&f=false},
+}
+
+@article{ModernHEMA,
+  author          = {Gassman, Jack and Gassman, J{\"u}rg and Le Coultre, Dominique},
+  journal         = {Acta Periodica Duellatorum},
+  number          = {2},
+  title           = {Fighting with the Longsword: Modern-day HEMA practices},
+  volume          = {5},
+  year            = {2017},
+  url             = {https://bop.unibe.ch/apd/article/view/6863},
 }
