--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -3,7 +3,7 @@ V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - ve
 
 
 \section{Chladná zbraň v reálném světě}
-Zde čtenáře velmi stručně seznámíme s historickým pozadím a základními charakteristikami, které provázejí boj s chladnou zbraní v reálném světě.
+V této sekci čtenáře velmi stručně seznámíme s historickým pozadím a základními charakteristikami, které provázejí boj s chladnou zbraní v reálném světě.
 
 \subsection{Průlet historií}
 
@@ -73,7 +73,11 @@ Seznámili jsme čtenáře s historickým pozadím a základními prvky, které 
 
 \section{Chladná zbraň ve videohrách}
 
+Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v reálném světě, nastíníme si, jakým způsobem bývá typicky adaptován ve videohrách - jaké jeho aspekty byly tímto universem věrně přejaty, jaké ignorovány, a jaké interpretovány s řádnou dávkou umělecké kreativity.
 
+\subsection{Obecný přehled}
+
+Jako většinu fenomenů majících svůj předobraz v reálném světě, i boj s chladnou zbraní svět videoher pojal způsobem silně zjednodušeným a stylizovaným.
 
 \subsection{Zaklínač 3 - vzorový příklad}
 
