--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -1,5 +1,5 @@
 \chapter{Úvod do problematiky}
-V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět videoher, a problémy, které při tom musí řešit.
+V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět akčních videoher, a problémy, které při tom musí řešit.
 
 
 \section{Chladná zbraň v reálném světě}
@@ -51,7 +51,7 @@ Zde si pouze nastíníme pár základních faktorů, které při souboji hrají 
 
 Máte-li oba stejný dosah, pohyb se však nestává o nic méně důležitým. Správná technika pohybu pomáhá šermíři držet pod kontrolou jeho těžiště a nenechat se rozhodit, když klopýtne, či na něj protivník agresivně naběhne; případně mu umožní bleskově se přiblížit a využít nechráněnou oblast, kterou mu protivník nabídl svým nemotorným pohybem. 
 
-\textbf{Zbroj}, kterou má protivník na sobě, může citelně omezit vaše možnosti co do způsobů, jak mu uštědřit zranění. Je-li například v plné plátové zbroji pozdního středověku, pokoušet se do ní sekat mečem je prakticky zbytečné. Vaše možnosti se citelně zúží - buď se můžete pokusit bodnout do některé ze skulin ve zbroji, nebo meč vyměnit za palcát či válečné kladivo\footnote{Případně lze meč chytit za čepel a záštitou zasuplovat hlavici kladiva - viz \cite{FightingWithTheGermanLongsword}} a protivníkovi tupýmy údery zlámat kosti. Protivník si vaší situace bude vědom, a o to jednodušší pro něj bude předvídat vaše akce.
+\textbf{Zbroj}, kterou má protivník na sobě, může citelně omezit vaše možnosti co do způsobů, jak mu uštědřit zranění. Je-li například v plné plátové zbroji pozdního středověku, pokoušet se do ní sekat mečem je prakticky zbytečné. Vaše možnosti se citelně zúží - buď se můžete pokusit bodnout do některé ze skulin ve zbroji, nebo meč vyměnit za palcát či válečné kladivo\footnote{Případně lze meč chytit za čepel a záštitou zasuplovat hlavici kladiva - viz \cite{FightingWithTheGermanLongsword}} a protivníkovi tupými údery zlámat kosti. Protivník si vaší situace bude vědom, a o to jednodušší pro něj bude předvídat vaše akce.
 
 Znakem každého dobrého šermíře je schopnost vcítit se do pozice svého protivníka a \textbf{odhadovat jeho budoucí akce} dříve, než se stanou. Nezkušený šermíř bude každý svůj úder provázet výrazným nápřahem, pro jeho protivníka pak není obtížné úder vyblokovat a přitom se rovnou k protivníkovi přiblížit a seknout po místě, které ví, že při úderu protivník nechal nechráněné. Zkušený šermíř pak ani nepotřebuje vidět výrazný nápřah, naučí se protivníkovu akci podvědomě vycítit z drobných náznaků (pohybů svalů, očí,...). Samozřejmě je možné předvádět údery fingovaně a čekat, že se při protiútoku otevře protivník vám. Pak záleží na jeho úsudku, zda úmysl prokoukne a provede fingovaný protiútok - stupňům falše se meze nekladou. 
 
@@ -64,20 +64,30 @@ Jedním ze základních požadavků, které jsou na vojáka kladeny, je schopnos
 
 Při skupinové šarvátce hraje zpravidla rozhodující roli taktická \textbf{koordinace} spolubojovníků. Nepřítel, který vám překvapivě vpadl do zad, je mnohem nepříjemnější záležitost, než nepřítel, který postává opodál a čeká, až na něj přijde řada.  
 
-Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při šarvátce na postupu, v omezeném čase a aniž by plán byl zachycen protivníkem, vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často netriviálně fyzicky vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Protipólem pak je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a v určitém doslechovém okruhu vcelku spolehlivá, avšak signály musí být předem dohodnuté a variant nemůže být mnoho, metoda tedy postrádá flexibilitu a detailnost informace. Jak vidno, jde o zásadní součást vedení bitvy, přesto však vidíme mnoho videoher ji zcela zanedbat.
+Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při šarvátce na postupu, v omezeném čase a aniž by plán byl zachycen protivníkem, vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často netriviálně fyzicky vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Protipólem pak je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a v určitém doslechovém okruhu vcelku spolehlivá, avšak signály musí být předem dohodnuté a variant nemůže být mnoho, metoda tedy postrádá flexibilitu a detailnost informace. Jak vidno, jde o zásadní součást vedení bitvy, přesto však vidíme mnoho videoher, které ji zcela zanedbávají.
 \bigbreak
 Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně kolosální výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat jednoho po druhém rychle, než mu ostatní přijdou na pomoc.
 
 \subsection*{Shrnutí}
 Seznámili jsme čtenáře s historickým pozadím a základními prvky, které charakterizují boj s chladnou zbraní v reálném světě. Nyní by měl být připraven pokročit dál a provést srovnání s přístupem, jakým tuto problematiku adaptuje svět videoher.
 
-\section{Chladná zbraň ve videohrách}
+\section{Chladná zbraň v akčních videohrách}
 
-Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v reálném světě, nastíníme si, jakým způsobem bývá typicky adaptován ve videohrách - jaké jeho aspekty byly tímto universem věrně přejaty, jaké ignorovány, a jaké interpretovány s řádnou dávkou umělecké kreativity.
+Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v reálném světě, nastíníme si, jakým způsobem bývá typicky adaptován v akčních videohrách - jaké jeho aspekty byly tímto universem věrně přejaty, jaké ignorovány, a jaké interpretovány s řádnou dávkou umělecké kreativity.
 
 \subsection{Obecný přehled}
 
-Jako většinu fenomenů majících svůj předobraz v reálném světě, i boj s chladnou zbraní svět videoher pojal způsobem silně zjednodušeným a stylizovaným.
+Účinkujícími ve hře jsou herní postavy. Ty mohou být ovládané buď hráčem, nebo počítačovým algoritmem, a lze je popsat nějakým jejich vnitřním stavem. Nyní si představíme základní veličiny, které jsou typickou součástí vnitřního stavu postavy bez ohledu, zda jde o hru zaměřenou na boj se střelnou zbraní, chladnou zbraní, či boj jakýkoliv jiný:
+
+\begin{itemize}
+    \item \textbf{\ac{HP}}... Číslo udávající zdravotní stav a životaschopnost postavy. Pokud klesne na nulu, postava umírá. Hráči jsou jeho HP obvykle v reálném čase explicitně komunikovány skrze ukazatel na obrazovce. V průběhu boje typicky neregeneruje\footnote{Popřípadě prostředky, skrze které ho lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu plánování.
+    \item \textbf{Výdrž}... Volitelný avšak častý prvek, číslo reprezentující akutní schopnost postavy vynakládat fyzické úsilí. Spotřebováváno chvatným pohybem a prováděním akcí, v průběhu boje zpravidla dochází k jeho rychlému opakovanému spotřebování a regeneraci.
+    \item \textbf{Inventář}... List dalších předmětů, které postava nese s sebou. Může jít o peníze, léčivé lektvary, munici do zbraní, náhradní zbraně, magické svitky, mapy a cokoliv dalšího v závislosti na hře. 
+\end{itemize}
+
+Postava v průběhu hry vykonává akce - akcí může být například pohyb, použití aktivní zbraně, interakce s okolím, či s předmětem z inventáře. Zde se podrobně zaměříme na akci použití zbraně.
+  
+
 
 \subsection{Zaklínač 3 - vzorový příklad}
 
