--- a/cs/seznamzkratek.tex
+++ b/cs/seznamzkratek.tex
@@ -15,3 +15,11 @@
     short=LARP,
     long=Live Action Role Playing,
 }
+\DeclareAcronym{HP}{
+    short=HP,
+    long=Health Points - body zdraví
+}
+\DeclareAcronym{dmg}{
+    short=dmg,
+    long=Damage - body poškození
+}
