--- a/cs/seznamzkratek.tex
+++ b/cs/seznamzkratek.tex
@@ -17,9 +17,19 @@
 }
 \DeclareAcronym{HP}{
     short=HP,
-    long=Health Points - body zdraví
+    long=Health Points - body zdraví,
 }
 \DeclareAcronym{dmg}{
     short=dmg,
-    long=Damage - body poškození
+    long=Damage - body poškození,
+}
+
+\DeclareAcronym{PC}{
+    short=PC,
+    long=Player Character - postava hráče,
+}
+
+\DeclareAcronym{NPC}{
+    short=NPC,
+    long=Non-player Character - nehráčská (počítačem řízená) postava,
 }
