--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -71,7 +71,7 @@ Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uveden
 \subsection*{Shrnutí}
 Seznámili jsme čtenáře s historickým pozadím a základními prvky, které charakterizují boj s chladnou zbraní v reálném světě. Nyní by měl být připraven pokročit dál a provést srovnání s přístupem, jakým tuto problematiku adaptuje svět videoher.
 
-
+\clearpage
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
  % xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx %
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
@@ -83,32 +83,34 @@ Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v re
 
 \subsection{Obecný přehled}
 
-Účinkujícími ve hře jsou \textbf{herní postavy}. Ty mohou být ovládané buď hráčem (takovou nazveme \acs{PC}\footnote{\Acl{PC}}), nebo počítačovým algoritmem (tu označíme jako \acs{NPC}\footnote{\Acl{NPC}}), a lze je popsat nějakým jejich \textbf{vnitřním stavem}. Nyní si představíme základní veličiny, které jsou typickou součástí vnitřního stavu postavy bez ohledu, zda jde o hru zaměřenou na boj se střelnou zbraní, chladnou zbraní, či boj jakýkoliv jiný:
+Účinkujícími ve hře jsou \textbf{herní postavy}. Ty mohou být ovládané buď hráčem (takovou nazveme \acs{PC}\footnote{\Acl{PC}}), nebo počítačovým algoritmem (tu označíme jako \acs{NPC}\footnote{\Acl{NPC}}), a lze je popsat nějakým jejich \textbf{vnitřním stavem}. Nyní si představíme základní veličiny, které jsou typickou součástí vnitřního stavu postavy ve všech akčních hrách bez ohledu na to, zda jde o hru zaměřenou na boj se střelnou zbraní, chladnou zbraní, či boj jakýkoliv jiný:
 
 \begin{itemize}
-    \item \textbf{\ac{HP}}... Číslo udávající zdravotní stav a životaschopnost postavy. Pokud klesne na nulu, postava umírá. Hráči jsou jeho HP obvykle v reálném čase explicitně komunikovány skrze ukazatel na obrazovce. V průběhu boje typicky neregeneruje\footnote{Popřípadě prostředky, skrze které ho lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu plánování.
+    \item \textbf{\ac{HP}}... Číslo udávající zdravotní stav a životaschopnost postavy. \textbf{Pokud klesne na nulu, postava umírá.} Hráči jsou jeho HP obvykle v reálném čase explicitně komunikovány skrze ukazatel na obrazovce. V průběhu boje typicky nejsou doplňovány\footnote{Popřípadě prostředky, skrze které je lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu plánování.
     \item \textbf{Výdrž}... Volitelný avšak častý prvek, číslo reprezentující akutní schopnost postavy vynakládat fyzické úsilí. Spotřebováváno chvatným pohybem a prováděním akcí, v průběhu boje zpravidla dochází k jeho rychlému opakovanému spotřebování a regeneraci.
     \item \textbf{Inventář}... List dalších předmětů, které postava nese s sebou. Může jít o peníze, léčivé lektvary, munici, náhradní zbraně, magické svitky, mapy a cokoliv dalšího v závislosti na hře. 
 \end{itemize}
 
-V závislosti na vstupu, který získává od hráče či řidícího algoritmu, se postava pohybuje po herním světě, interaguje s objekty herního světa a s obsahem svého inventáře a používá svou zbraň. Na použití zbraně se nyní zaměříme.
+V závislosti na vstupu, který získává od hráče či od řidícího algoritmu, se postava pohybuje po herním světě, interaguje s objekty herního světa a s obsahem svého inventáře a používá svou zbraň. Na použití zbraně se nyní zaměříme.
 
-Ovládání zbraně bývá typicky omezené na stisknutí tlačítka - Zaútoč! - načež postava sama provede útok tak, jak uzná za vhodné - obvykle přehráním jedné ze seznamu animací, které pro danou kombinaci postavy a zbraně předem připravil autor hry.
+\textbf{Ovládání zbraně} bývá typicky omezené na stisknutí tlačítka - \textbf{Zaútoč!} - načež postava sama provede útok tak, jak uzná za vhodné - obvykle přehráním jedné ze seznamu animací, které pro danou kombinaci postavy a zbraně předem připravil autor hry.
 
 Implikace, které takto jednoduché rozhraní přináší \textbf{pro hráče}, jsou následující:
 \begin{itemize}
     \item \textbf{Intuitivnost} - Každý hráč, který spustí hru a zkusí náhodně mačkat tlačítka, rychle ovládání pochopí a začne být ve hře použitelný - žádná nutnost procházet úmorným tutoriálem.
     \item \textbf{Uniformní rozhraní pro všechny zbraně} - Tímto způsobem lze ovládat libovolnou zbraň, ať už jde o dvoumetrovou halapartnu či pěsti hráčovy postavy. Hráč tedy není přehlcen množstvím jednoúčelových herních systémů a z výhod, které získá svým zdokonalováním v použití tohoto systému, může těžit po celou hru.
-    \item \textbf{Nespecifičnost rozhraní} - Rozhraní hráči neumožňuje těžit ze silných stránek žádné konkrétní zbraně. Hra mu skrze bojový systém není schopna předat jakékoliv ponaučení ohledně použití zbraně v reálném světě.
-    \item \textbf{Limitovaná předvídatelnost} - Vzhledem k tomu, že postava sama vybírá jakou konkrétní akci učiní, vnáší se tím do hry prvek náhody, který může hru emocionálně okořenit.\footnote{Pokud však výběr akce probíhá nějakým deterministickým způsobem, hráč v něm brzy intuitivně vypozoruje určité vzory a naučí se akce své postavy do jisté míry předvídat a kalkulovat s nimi při plánování svého postupu - tím může bojový systém získat na hloubce.}
+    \item \textbf{Nespecifičnost rozhraní} - Rozhraní hráči neumožňuje těžit ze silných stránek žádné konkrétní zbraně. Hra mu skrze bojový systém není schopna poskytnout vzdělávací lekci ohledně vlastností zbraně v reálném světě.
+    \item \textbf{Limitovaná předvídatelnost} - Vzhledem k tomu, že akci, která bude vykonána, nevybírá hráč, ale jeho herní postava, vnáší se tím do hry prvek náhody, který může hru emocionálně okořenit.\footnote{Pokud však výběr akce probíhá nějakým deterministickým způsobem, hráč v něm brzy intuitivně vypozoruje určité vzory a naučí se akce své postavy do jisté míry předvídat a kalkulovat s nimi při plánování svého postupu - tím může bojový systém získat na hloubce.}
 \end{itemize}
 
 A co důsledky, které tento přístup přináší z pohledu \textbf{tvůrce hry}?:
 \begin{itemize}
-    \item \textbf{Předvídatelnost} -
-    \item \textbf{Uniformní rozhraní pro všechny zbraně} -
+    \item \textbf{Předvídatelnost} - Tvůrce hry má přesnou kontrolu nad tím, jaké akce může jakákoliv postava potenciálně provádět. Tím se zmenšuje prostor pro výskyt neošetřených okrajových případů.
+    \item \textbf{Uniformní rozhraní pro všechny zbraně} - 
     \item \textbf{Nespecifičnost rozhraní} - Zbraň je tím zpravidla smrštěna do listu statů\footnote{Povrchní veličiny typu dosah, poškození, rychlost úderu}, které ji popisují.
 \end{itemize}
+
+Představili jsme si.. Jak vidno, je obtížné dosáhnout, aby takto jedoduchý bojový systém posloužil sám o sobě jako nosná herní mechanika. Chceme-li mu dodat hloubku... Jak mu lze dodat hloubku si nyní názorně předvedeme na příkladě komerčně úspěšné hry z nedávných let.
 
 \subsection{Zaklínač 3 - vzorový příklad}
 
